--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div>
                     <button onclick="num_click(this.innerHTML)">0</button>
-                    <button onclick="num_click(this.innerHTML)">00</button>
+                    <button onclick="num_click_00(this.innerHTML)">00</button>
                     <button onclick="num_click(this.innerHTML)">.</button>
                     <button onclick="ope_click(this.innerHTML)">/</button>
                 </div>
