一部スペルミスを修正

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <button onclick="ope_click(this.innerHTML)">/</button>
                 </div>
                 <div>
-                    <button onclick="equal_click()">=</button>
-                    <button onclick="c_click()">AC</button>
+                    <button onclick="equal_click(this.innerHTML)">=</button>
+                    <button onclick="c_click(this.innnerHTML)">AC</button>
                 </div>
             </div>
         </div>
