00キーが最初に入力できてしまうバグを修正中

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 id="header">電卓</h1>
             <div id="calc">
                 <div>
-                    <input readonly id="result" type="text" value="0">
+                    <input readonly id="result" type="text" value="">
                 </div>
                 <div>
                     <button onclick="num_click(this.innerHTML)">7</button>
@@ -37,7 +37,7 @@
                     <button onclick="num_click(this.innerHTML)">0</button>
                     <button onclick="num_click_00(this.innerHTML)">00</button>
                     <button onclick="num_click(this.innerHTML)">.</button>
-                    <button onclick="ope_click(this.innerHTML)">/</button>
+                    <button onclick="radix_click(this.innerHTML)">/</button>
                 </div>
                 <div>
                     <button onclick="equal_click(this.innerHTML)">=</button>
