--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <div>
                     <button onclick="num_click(this.innerHTML)">0</button>
                     <button onclick="num_click_00(this.innerHTML)">00</button>
-                    <button onclick="num_click(this.innerHTML)">.</button>
-                    <button onclick="radix_click(this.innerHTML)">/</button>
+                    <button onclick="radix_click(this.innerHTML)">.</button>
+                    <button onclick="ope_click(this.innerHTML)">/</button>
                 </div>
                 <div>
                     <button onclick="equal_click(this.innerHTML)">=</button>
